--- a/07_Spring_Enviroment/pom.xml
+++ b/07_Spring_Enviroment/pom.xml
@@ -8,5 +8,13 @@
     <artifactId>07_Spring_Enviroment</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>6.2.1</version>
+        </dependency>
 
+    </dependencies>
 </project>
