--- a/Z13_Spring_Boot/src/main/resources/application.properties
+++ b/Z13_Spring_Boot/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Z13_Spring_Boot
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/dia?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=1234
 
